# SDLIntro

./: CMakeLists.txt
assets/Shaders/: frag.txt  vert.txt
include/: Application.hpp  Camera.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp
include/glad/: glad.h
src/: Application.cpp  Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  glad.c  main.cpp  vert.txt
